# Indie-Studio

./: Makefile  README.md  readme.txt
CMake/: .kateproject  CMakeLists.txt
CMake/include/irr/: IrrCompileConfig.h
CMake/lib/: libX11.so.6  libXft.so.2.3.2  libXxf86vm.so.1
includes/: ABomb.hpp  AObject2D.hpp  AObject3D.hpp  AObjectText.hpp  APowerUp.hpp  Background.hpp  Behavior.hpp  Bomb.hpp  Bomberman.hpp  BombermanProtocol.hpp  Character.hpp  Coord.hpp  GameMode.hpp  GameModeProtocol.hpp  IAController.hpp  IController.hpp  IController.hpp~  IObject.hpp  Image.hpp  Level.hpp  MapObserver.hpp  Musician.hpp  ObjTest.hpp  ObjectExplosion.hpp  ParticuleObject.hpp  Player.hpp  PlayerController.hpp  PlayerController.hpp~  PowerStat.hpp  Text.hpp  Wall.hpp
includes/Bomberman/GameObject/: Floor.hpp  Trap.hpp
includes/Bomberman/Job/: Builder.hpp  Hunter.hpp  Illusioniste.hpp  Marathonian.hpp  Thief.hpp
includes/Engine/: AEngine.hpp  ICamera.hpp  IEngine.hpp  IGui.hpp  IInput.hpp  ISound.hpp  Irrlicht.hpp  IrrlichtEngine.hpp  MyEventReceiver.hpp  SoundSfml.hpp
includes/Scenes/: IScene.hpp  MenuInGameScene.hpp  PlayerSetting.hpp  SetTypeGameScene.hpp  SoloModeGameScene.hpp  SoloModeSettingScene.hpp  VSModeGameScene.hpp  VSModeSettingScene.hpp  VSModeSettingTouchs.hpp
includes/States/: IState.hpp  IStateProtocol.hpp  MainMenu.hpp  SoloModeGameState.hpp  VSModeGameState.hpp  VSModeSetting.hpp
ressources/: Saitama.fbx
ressources/levels/: level1
srcs/: Bomberman.cpp  PlayerController.cpp  main.cpp
srcs/IA/: Behavior.cpp
srcs/Pattern/: TesterMObserver.cpp  patternExample.isb  patternFiller.isb  patternSpawn.ibs
srcs/Scenes/: MenuInGameScene.cpp  PlayerSetting.cpp  SetTypeGameScene.cpp  SoloModeGameScene.cpp  SoloModeSettingScene.cpp  VSModeGameScene.cpp  VSModeSettingScene.cpp  VSModeSettingTouchs.cpp
srcs/States/: MainMenu.cpp  SoloModeGameState.cpp  VSModeGameState.cpp
srcs/bomberman/: ABomb.cpp  Bomb.cpp  Character.cpp  Floor.cpp  GameMode.cpp  IAController.cpp  Level.cpp  MapObserver.cpp  Player.cpp  PowerStat.cpp  Trap.cpp  Wall.cpp
srcs/bomberman/Job/: Builder.cpp  Hunter.cpp  Illusioniste.cpp  Marathonian.cpp  Thief.cpp
srcs/engine/: AEngine.cpp  Irrlicht.cpp  IrrlichtEngine.cpp  MyEventReceiver.cpp  SoundSfml.cpp
